--- a/src/components/css/ExercisesCalendar.scss
+++ b/src/components/css/ExercisesCalendar.scss
@@ -1,14 +1,19 @@
 .react-calendar {
   width: 100%;
 }
+
 .react-calendar__tile {
   font-size: 1em;
   font-weight: 600;
   position: relative;
 }
-button.react-calendar__tile--active:enabled:hover, button.react-calendar__tile--active:enabled:focus {
+
+.react-calendar__tile--active,
+button.react-calendar__tile--active:enabled:focus,
+button.react-calendar__tile--active:enabled:hover {
   background: rgb(130, 216, 216);
 }
+
 .dumbbell {
   position: absolute;
   width: 1em;
